2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Remove
	  debug code.

2009-09-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: If there
	  are too few selections for up/down close window & process
	  key. Should be more in line with our left/right behavior.

2009-09-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Accept
	  punctuation for matching if it matches an item in the list.
	  Fixes regression with XML and related languages' completion.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ParameterInformationWindow.cs:
	  Added some insanity checks.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/ListWidget.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionDataList.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  Added new option for special handling where only hint code
	  completion can be given. 

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  Resolved a fixme, since we're now using gtk+ 2.12.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.Gui.csproj:
	* MonoDevelop.Projects.Gui.Completion/ListWidget.cs:
	* MonoDevelop.Projects.Gui.Completion/ICompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/ICompletionWidget.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionContext.cs:
	* MonoDevelop.Projects.Gui.Completion/IParameterDataProvider.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionWindowManager.cs:
	* MonoDevelop.Projects.Gui.Completion/ParameterInformationWindowManager.cs: