@@ -1,3 +1,8 @@
+2009-09-17  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.RunOptionsPanelWidget.cs:
+	  Fix broken GUI file.
+
 2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Remove
